RESOLVED FIXED157512
[JSC] Fix the !ENABLE(DFG_JIT) build
https://bugs.webkit.org/show_bug.cgi?id=157512
Summary [JSC] Fix the !ENABLE(DFG_JIT) build
Csaba Osztrogonác
Reported 2016-05-10 05:16:29 PDT
../../Source/JavaScriptCore/jit/Repatch.cpp: In function 'void JSC::repatchByIdSelfAccess(JSC::CodeBlock*, JSC::StructureStubInfo&, J SC::Structure*, JSC::PropertyOffset, const JSC::FunctionPtr&, bool)': ../../Source/JavaScriptCore/jit/Repatch.cpp:98:36: error: invalid use of incomplete type 'class JSC::StructureStubInfo' If DFG_JIT is enabled, StructureStubInfo.h is included by DFGSpeculativeJIT.h. We should include it in Repatch.cpp too to avoid this transitive dependency.
Attachments
Patch (1.17 KB, patch)
2016-05-10 05:19 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-05-10 05:19:09 PDT
WebKit Commit Bot
Comment 2 2016-05-10 09:33:38 PDT
Comment on attachment 278487 [details] Patch Clearing flags on attachment: 278487 Committed r200623: <http://trac.webkit.org/changeset/200623>
WebKit Commit Bot
Comment 3 2016-05-10 09:33:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.