[JSC] Fix the !ENABLE(DFG_JIT) build https://bugs.webkit.org/show_bug.cgi?id=157512

Reviewed by Mark Lam.

* jit/Repatch.cpp:


Canonical link: https://commits.webkit.org/175652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200623 268f45cc-cd09-0410-ab3c-d52691b4dbfc